--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>JS Debugging</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/assets/css/site.css" />
-    <script src="/assets/js/app.js" async defer></script>
+    <link rel="stylesheet" href="assets/css/site.css" />
+    <script src="assets/js/app.js" async defer></script>
   </head>
   <body>
 
