--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   
     <header class="centerMe">
-      <img src="/assets/images/debug.png" />
+      <img src="assets/images/debug.png" />
       <h1>DEBUGGING</h1>
     </header>
 
